matched words in srs
